--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Yourim Shin"
 author: "shinyourim"
-description: "Yourim's Personal Blog" # This will show up if you share your sites url as a post.
+description: "Yourim's Personal Academic Blog" # This will show up if you share your sites url as a post.
 
 # All of these are optional and can be removed or commented out
 email: "shinyourim@kaist.ac.kr"
